@@ -24,7 +24,6 @@ i						{font-style:italics;}
 #imgwrap 				{width:100%; height:100%; position:fixed; top:0; left:0; z-index:-1; background-image:url('backgroundimage.jpg'); background-repeat:no-repeat; background-position:center center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover;}
 .wrapper				{width:100%; background-color:rgba(46, 41, 6, 0.6);}
 
-
 /* Breadcrumbs
    ============================================= */
 a.crumb					{display:inline-block; vertical-align:top; padding:0 10px; font-size:13px; color:#7BBCFF; line-height:1.1em;}
@@ -33,12 +32,60 @@ a.crumb:nth-of-type(1)	{padding-left:5px;}
 .crumbwrap				{width:960px; margin:0 auto; padding-top:10px; font-size:13px; color:#CACBCB; line-height:1.1em;}
 .crumbwrap span			{display:inline-block; vertical-align:top; padding:0 10px; font-size:13px; color:#fff; line-height:1.1em;}
 
-
 /* Languages links (top right)
    ============================================= */
 a.tongue				{display:inline-block; vertical-align:top; width:50px; text-align:center; color:#ccc; font-size:14px;}
 a.tongue:hover			{color:#fff;}
 
+
+/* Header styles
+   ============================================= */
+.default				{width:960px; margin:0 auto; padding:0;}
+.default.head			{padding-top:20px;}
+.default.min			{padding-top:10px;}
+.logowrap				{width:760px; display:inline-block; vertical-align:top;}
+.tonguewrap				{width:200px; display:inline-block; vertical-align:top; color:#fff; font-size:14px; text-align:right;}
+.declare.head			{width:960px; padding-top:5px; border-top:10px solid #fff; font-size:14px; color:#ccc;}
+
+/* Money Module styles
+   ============================================= */
+.moneywrap				{width:880px; margin:0 auto; font-size:32px; padding:60px 0;}
+.moneymodwrap			{width:380px; display:inline-block; vertical-align:top;}
+.moneymodwrap.donor		{padding-right:60px;}
+.moneymodwrap.sector	{padding-left:60px;}
+.moneytitle				{width:300px; padding:20px 40px; text-align:center; color:#fff;}
+.moneytitle.donor		{background-color:#008FFF;}
+.moneytitle.sector		{background-color:#00C475;}
+.moneysubtitle			{text-align:center; color:#ccc; font-size:14px; padding-bottom:20px;}
+.peakspace				{width:160px; display:inline-block; vertical-align:top;}
+.peakwrap				{width:140px; display:inline-block; vertical-align:top;}
+.peak					{width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent;}
+.peak.donor				{border-top:20px solid #008FFF;}
+.peak.sector			{border-top:20px solid #00C475;}
+.barchartwrap			{width:100px; height:10px; background-color:#000000;}
+.bar.donor				{height:10px; background-color:#1E90FF;} /* Check #chunkmoney_row for more styling of bar */
+.bar.sector				{height:10px; background-color:#00C475;} /* Check #chunkmoney_row for more styling of bar */
+
+/* Map styles
+   ============================================= */
+.mapwrap				{width:100%; min-height:300px; margin:0 auto; background-color:rgba(0,0,0,0.8);}
+ #map					{width:100%; height:400px;}
+
+/* Stats (key figures) styles
+   ============================================= */
+.statswrap				{width:990px; margin:0 auto; padding:40px 0;}
+.statstitle				{font-size:24px; color:#ccc; padding-bottom:10px;}
+.statstitle span		{font-size:18px; color:#B8C8CD; white-space:nowrap;}
+.statsnum				{font-size:128px; color:#2E98FF;}
+.statsnum.small			{font-size:64px;}
+.declare.stats			{width:960px; margin:0 auto; padding-top:10px; color:#ccc; font-size:16px;}
+
+/* Active / Ended projects styles
+   ============================================= */
+.endedwrap				{width:960px; margin:0 auto; padding:40px 20px;}
+.activewrap				{width:960px; margin:0 auto; padding:40px 20px;}
+.tablewrap				{background-color:rgba(0,14,32,0.7); padding:20px; border-radius:0 0 8px 8px;}
+.listmorewrap			{width:960px; margin:0 auto; text-align:center;}
 
 /* Buttons for sections (view all / load more)
    ============================================= */
@@ -53,7 +100,20 @@ a.list_more_link:hover	{background-color:#0081FF;}
    ============================================= */
 table					{border-spacing:0;}
 
-/* Headers
+/* Header table
+   ============================================= */
+table.country.min		{width:960px; margin:0 auto; padding:10px 0;}
+table.country.min td:nth-child(1)	{width:860px; max-width:860px; padding-right:20px; font-size:32px; line-height:1.1em; color:#fff;}
+table.country			{width:960px; margin:0 auto; padding:20px 0;}
+table.country td:nth-child(1)		{width:800px; max-width:800px; padding-right:10px; font-size:64px; line-height:1.1em; color:#fff;}
+
+/* Table for Money Modules
+   ============================================= */
+table.moneymod			{width:380px; min-height:300px; background-color:#fff; padding:20px 40px; font-size:20px;}
+table.moneymod td:nth-child(1)	{width:190px; padding:5px 10px 5px 0;}
+table.moneymod td:nth-child(2)	{width:100px;}
+
+/* Table titles
    ============================================= */
 table.title				{width:100%; border-collapse:collapse; padding-bottom:15px; border-bottom:10px solid #fff;}
 table.title.space		{border-collapse:separate;} /* Active / Ended projects need spacing */
@@ -63,7 +123,12 @@ table.title tr:nth-child(2) td	{padding:0;}
 .declare.title.list		{vertical-align:bottom; text-align:right; padding:0; font-size:14px; line-height:1.1em; color:#fff;}
 .declare.title.table 	{margin-top:10px; font-size:14px; line-height:1.35em; color:#CACBCB; padding:10px 20px; background-color:#000;}
 
-/* Active / Ended projects
+/* Table for Stats (key figures)
+   ============================================= */
+table.stats				{width:990px; max-width:960px; border-collapse:separate; border-spacing:15px; border-left:0; border-right:0;}
+table.stats td			{background-color:rgba(0,14,32,0.7); padding:40px;}
+
+/* Table for Active / Ended projects
    ============================================= */
 table.list				{width:100%; border-collapse:collapse;}
 table.list td			{color:#B8C8CD; font-size:20px; line-height:1.45em; word-spacing:0.7px; padding:20px 20px 20px 0; vertical-align:top;}
@@ -75,7 +140,7 @@ table.list a:visited	{color:#A8C5E5; text-decoration: none;}
 table.list a:hover		{color:#fff; text-decoration: none;}
 table.list a:active		{color:#A8C5E5; text-decoration: none;}
 
-/* Money list (Donors / Sectors)
+/* Table for Money list (Donors / Sectors)
    ============================================= */
 table.money				{width:100%; border-collapse:collapse;}
 table.money td			{text-align:right; color:#B8C8CD; font-size:16px; line-height:1.45em; word-spacing:0.7px; padding:20px; vertical-align:top; border-bottom:1px solid #1E90FF;}
@@ -102,7 +167,7 @@ table.money a:visited	{color:#A8C5E5; text-decoration: none;}
 table.money a:hover		{color:#fff; border-bottom:0px dotted #B8C8CD; text-decoration:none;}
 table.money a:active	{color:#A8C5E5; text-decoration: none;}
 
-/* Activities list (Donors / Sectors)
+/* Table for Activities list (Donors / Sectors)
    ============================================= */
 table.activity			{width:100%; border-collapse:collapse;}
 table.activity td		{color:#B8C8CD; font-size:20px; line-height:1.45em; word-spacing:0.7px; padding:10px 20px; vertical-align:top;}
@@ -116,8 +181,18 @@ table.activity a:hover	{color:#fff; border-bottom:0px dotted #B8C8CD; text-decor
 table.activity a:active	{color:#95B0CF; text-decoration: none;}
 
 
+/* About
+   ============================================= */
+.aboutwrap				{width:920px; margin:0 auto; padding:40px 20px;}
+.abouttxt				{width:570px; padding-right:60px; display:inline-block; vertical-align:top; line-height:1.35em; word-spacing:0.05em; font-size:18px; color:#fff;}
+.abouttxt span			{color:#fff;}
+.iatilogo				{width:290px; display:inline-block; vertical-align:top; text-align:right;}
+a.iatilink				{display:block; width:270px; margin:0 auto; padding:0 30px;}
+
+
 /* Data Investigators alert
    ============================================= */
+.datawrap				{width:100%; margin:0 auto;}
 a.datainvest			{display:block; width:100%; margin:0 auto; padding:10px 0; line-height:1.5em; font-size:14px; color:#D6D2A1; text-align:center; background-color:rgba(194, 0, 255, 0.4);}
 a.datainvest:hover		{color:#fff; background-color:rgba(194, 0, 255, 0.8);}
 
