@@ -22,7 +22,7 @@
 	.bold		{font-weight:bold;}
 	.bold.ob	{font-style:italic;}
 	
-	.navi		{width:100%; background-color:rgba(42,42,42,0.8); position:fixed;}
+	.navi		{width:100%; background-color:rgba(42,42,42,0.8); position:fixed; z-index:9999;}
 	.hiwrap		{display:inline-block; vertical-align:top; width:560px; max-width:560px;}
 	.linkwrap	{display:inline-block; vertical-align:top; width:400px; max-width:400px;}
 	.link		{display:inline-block; vertical-align:top;}
