@@ -394,47 +394,43 @@ BANGLADESH
 </div>
 
 #chunkhead
-<div style="width:960px; margin:0 auto; padding-top:20px;">
-	<div style="width:760px; display:inline-block; vertical-align:top;">
+<div class="default head">
+	<div class="logowrap">
 		<a href="/#examples" title="{mainback_text}"><img src="{art}ctlogo.25.png" alt="Country Tracker logo" width="232" height="21"/></a>
-	</div><div style="width:200px; display:inline-block; vertical-align:top; color:#fff; font-size:14px; text-align:right;">
+	</div><div class="tonguewrap">
 		<a href="?tongue=eng" class="tongue" title="View this in English(UK)">ENG</a> / <a href="?tongue=fra" class="tongue" title="View this in French">FRA</a> / <a href="?tongue=spa" class="tongue" title="View this in Spanish">SPA</a>
 	</div>
 	<div class="crumbwrap">{crumbs}</div>
 </div>
 
 #chunkcountrymin
-<div style="width:960px; margin:0 auto; padding-top:10px;">
-	<table style="width:960px; margin:0 auto; padding:10px 0;">
+<div class="default min">
+	<table class="country min">
 		<tr>
-			<td style="width:860px; max-width:860px; padding-right:20px; font-size:32px; line-height:1.1em; color:#fff;">{country_name}</td>
+			<td>{country_name}</td>
 			<td><img src="{country_flag}" alt="{country_name} flag" width="75"/></td>
 		</tr>
 	</table>
-	<div style="width:960px; padding-top:5px; border-top:10px solid #fff;">
-		<div style="font-size:14px; color:#ccc;">{declare_main_text}</div>
-	</div>
+	<div class="declare head">{declare_main_text}</div>
 </div>
 	
 #chunkcountry
-<div style="width:960px; margin:0 auto; padding:0;">
-	<table style="width:960px; margin:0 auto; padding:20px 0;">
+<div class="default">
+	<table class="country">
 		<tr>
-			<td style="width:800px; max-width:800px; padding-right:10px; font-size:64px; line-height:1.1em; color:#fff;">{country_name}</td>
+			<td>{country_name}</td>
 			<td><img src="{country_flag}" alt="{country_name} flag" width="150" height="90"/></td>
 		</tr>
 	</table>
-	<div style="width:960px; padding-top:5px; border-top:10px solid #fff;">
-		<div style="font-size:14px; color:#ccc;">{declare_main_text}</div>
-	</div>
+	<div class="declare head">{declare_main_text}</div>
 </div>
 
 #chunkmoney_row
 <tr>
-	<td style="width:190px; padding:5px 10px 5px 0;">{donor}</td>
-	<td style="width:100px;" title="{usd} USD">
-		<div style="width:100px; height:10px; background-color:#000000;">
-			<div style="width:{pct}px; height:10px; background-color:#1E90FF;"></div>
+	<td>{donor}</td>
+	<td title="{usd} USD">
+		<div class="barchartwrap">
+			<div class="bar donor" style="width:{pct}px;"></div>
 		</div>
 	</td>
 </tr>
@@ -443,69 +439,69 @@ BANGLADESH
 {chunkmoney_row}
 
 #chunkmoney
-<div style="width:880px; margin:0 auto; font-size:32px; padding:60px 0;">
-	<div style="width:380px; display:inline-block; vertical-align:top; padding-right:60px;">
-		<div style="width:300px; background-color:#008FFF; padding:20px 40px; text-align:center; color:#fff;">
+<div class="moneywrap">
+	<div class="moneymodwrap donor">
+		<div class="moneytitle donor">
 			{title_donor_text}
 		</div>
-		<div style="width:160px; display:inline-block; vertical-align:top;"></div>
-		<div style="width:140px; display:inline-block; vertical-align:top;">
-			<div style="width:0; height:0; border-top:20px solid #008FFF; border-left:20px solid transparent; border-right:20px solid transparent;"></div>
+		<div class="peakspace"></div>
+		<div class="peakwrap">
+			<div class="peak donor"></div>
 		</div>
-		<div style="text-align:center; color:#ccc; font-size:14px; padding-bottom:20px;">{subtitle_donor_text}</div>
-		<table style="width:380px; min-height:300px; background-color:#fff; padding:20px 40px; font-size:20px;">
+		<div class="moneysubtitle">{subtitle_donor_text}</div>
+		<table class="moneymod">
 {chunkmoney_rows}
 		</table>
 		<a href="#view=donors" class="list_view_link">
 			{link_donor_text}
 		</a>
-	</div><div style="width:380px; display:inline-block; vertical-align:top; padding-left:60px;">
-		<div style="width:300px; background-color:#00C475; padding:20px 40px; text-align:center; color:#fff;">
+	</div><div class="moneymodwrap sector">
+		<div class="moneytitle sector">
 			{title_sector_text}
 		</div>
-		<div style="width:160px; display:inline-block; vertical-align:top;"></div>
-		<div style="width:140px; display:inline-block; vertical-align:top;">
-			<div style="width:0; height:0; border-top:20px solid #00C475; border-left:20px solid transparent; border-right:20px solid transparent;"></div>
+		<div class="peakspace"></div>
+		<div class="peakwrap">
+			<div class="peak sector"></div>
 		</div>
-		<div style="text-align:center; color:#ccc; font-size:14px; padding-bottom:20px;">{subtitle_sector_text}</div>
-		<table style="width:380px; min-height:300px; background-color:#fff; padding:20px 40px; font-size:20px;">
+		<div class="moneysubtitle">{subtitle_sector_text}</div>
+		<table class="moneymod">
 			<tr>
-				<td style="width:190px; padding:5px 10px 5px 0;">Infrastructure</td>
-				<td style="width:100px;" title="1,000,000 USD">
-					<div style="width:100px; height:10px; background-color:#00C475;">
-						<div style="width:100px; height:10px; background-color:#00C475;"></div>
+				<td>Infrastructure</td>
+				<td title="1,000,000 USD">
+					<div class="barchartwrap">
+						<div class="bar sector" style="width:100px;"></div>
 					</div>
 				</td>
 			</tr>
 			<tr>
-				<td style="width:190px; padding:5px 10px 5px 0;">Other social services</td>
-				<td style="width:100px;" title="700,000 USD">
-					<div style="width:100px; height:10px; background-color:#000000;">
-						<div style="width:70px; height:10px; background-color:#00C475;"></div>
+				<td>Other social services</td>
+				<td title="700,000 USD">
+					<div class="barchartwrap">
+						<div class="bar sector" style="width:70px;"></div>
 					</div>
 				</td>
 			</tr>
 			<tr>
-				<td style="width:190px; padding:5px 10px 5px 0;">Health</td>
-				<td style="width:100px;" title="300,000 USD">
-					<div style="width:100px; height:10px; background-color:#000000;">
-						<div style="width:30px; height:10px; background-color:#00C475;"></div>
+				<td>Health</td>
+				<td title="300,000 USD">
+					<div class="barchartwrap">
+						<div class="bar sector" style="width:30px;"></div>
 					</div>
 				</td>
 			</tr>
 			<tr>
-				<td style="width:190px; padding:5px 10px 5px 0;">Other</td>
-				<td style="width:100px;" title="200,000 USD">
-					<div style="width:100px; height:10px; background-color:#000000;">
-						<div style="width:20px; height:10px; background-color:#00C475;"></div>
+				<td>Other</td>
+				<td title="200,000 USD">
+					<div class="barchartwrap">
+						<div class="bar sector" style="width:20px;"></div>
 					</div>
 				</td>
 			</tr>
 			<tr>
-				<td style="width:190px; padding:5px 10px 5px 0;">Governance and security</td>
-				<td style="width:100px;" title="100,000 USD">
-					<div style="width:100px; height:10px; background-color:#000000;">
-						<div style="width:10px; height:10px; background-color:#00C475;"></div>
+				<td>Governance and security</td>
+				<td title="100,000 USD">
+					<div class="barchartwrap">
+						<div class="bar sector" style="width:10px;"></div>
 					</div>
 				</td>
 			</tr>
@@ -517,45 +513,43 @@ BANGLADESH
 </div>
 
 #chunkmap
-<div style="width:100%; min-height:300px; margin:0 auto; background-color:rgba(0,0,0,0.8);">
-	<div style="width:100%; margin:0 auto; color:#fff; font-size:48px; text-align:center; padding:0;">
-		<div id="map" style="width:100%;height:400px;"></div>
-	</div>
+<div class="mapwrap">
+	<div id="map"></div>
 </div>
 
 #chunkstats
-<div style="width:990px; margin:0 auto; padding:40px 0;">
-	<table style="width:990px; max-width:960px; border-collapse:separate; border-spacing:15px; border-left:0; border-right:0;">
+<div class="statswrap">
+	<table class="stats">
 		<tr>
-			<td rowspan="2" colspan="2" style="background-color:rgba(0,14,32,0.7); padding:40px;" title="{stats_active_tip_text}">
-				<div style="font-size:24px; color:#ccc; padding-bottom:10px;">{stats_active_text}</div>
-				<div style="font-size:128px; color:#2E98FF;">{active_projects}</div>
+			<td rowspan="2" colspan="2" title="{stats_active_tip_text}">
+				<div class="statstitle">{stats_active_text}</div>
+				<div class="statsnum">{active_projects}</div>
 			</td>
-			<td style="background-color:rgba(0,14,32,0.7); padding:40px;" title="{stats_ending_tip_text}">
-				<div style="font-size:24px; color:#ccc; padding-bottom:10px;">{stats_ending_text} <span style="font-size:18px; color:#B8C8CD; white-space:nowrap;">&lt; {stats_ending_period_text}</span></div>
-				<div style="font-size:64px; color:#2E98FF;">{ending_soon}</div>
+			<td title="{stats_ending_tip_text}">
+				<div class="statstitle">{stats_ending_text} <span>&lt; {stats_ending_period_text}</span></div>
+				<div class="statsnum small">{ending_soon}</div>
 			</td>
-			<td style="background-color:rgba(0,14,32,0.7); padding:40px;" title="{stats_total_tip_text}">
-				<div style="font-size:24px; color:#ccc; padding-bottom:10px;">{stats_total_text}</div>
-				<div style="font-size:64px; color:#2E98FF;">{total_projects}</div>
+			<td title="{stats_total_tip_text}">
+				<div class="statstitle">{stats_total_text}</div>
+				<div class="statsnum small">{total_projects}</div>
 			</td>
 		</tr>
 		<tr>
-			<td style="background-color:rgba(0,14,32,0.7); padding:40px;" title="{stats_starting_tip_text}">
-				<div style="font-size:24px; color:#ccc; padding-bottom:10px;">{stats_starting_text} <span style="font-size:18px; color:#B8C8CD; white-space:nowrap;">&lt; {stats_starting_period_text}</span></div>
-				<div style="font-size:64px; color:#2E98FF;">{starting_soon}</div>
+			<td title="{stats_starting_tip_text}">
+				<div class="statstitle">{stats_starting_text} <span>&lt; {stats_starting_period_text}</span></div>
+				<div class="statsnum small">{starting_soon}</div>
 			</td>
-			<td style="background-color:rgba(0,14,32,0.7); padding:40px;" title="{stats_publisher_tip_text}">
-				<div style="font-size:24px; color:#ccc; padding-bottom:10px;">{stats_publisher_text}</div>
-				<div style="font-size:64px; color:#2E98FF;">{numof_publishers}</div>
+			<td title="{stats_publisher_tip_text}">
+				<div class="statstitle">{stats_publisher_text}</div>
+				<div class="statsnum small">{numof_publishers}</div>
 			</td>
 		</tr>
 	</table>
-	<div style="width:960px; margin:0 auto; padding-top:10px; color:#ccc; font-size:16px;">{declare_stats_text}</div>
+	<div class="declare stats">{declare_stats_text}</div>
 </div>
 
 #chunkactive
-<div style="width:960px; margin:0 auto; padding:40px 20px;">
+<div class="activewrap">
 	<table class="title space">
 		<tr>
 			<td><img src="{art}active_icon.png" alt="{active_icon_text}" width="40" height="40"/></td>
@@ -563,18 +557,18 @@ BANGLADESH
 			<td><div class="declare title list">{list_active_declare_text}</div></td>
 		</tr>
 	</table>
-	<div style="background-color:rgba(0,14,32,0.7); padding:20px; border-radius:0 0 8px 8px;">
+	<div class="tablewrap">
 		<table class="list">
 			{ctbox1table_datas}
 		</table>
 	</div>
-	<div style="width:960px; margin:0 auto; text-align:center;">
+	<div class="listmorewrap">
 		<a href="#ctrack_ending_more" class="list_more_link">{list_more_active_text}</a>
 	</div>
 </div>
 
 #chunkended
-<div style="width:960px; margin:0 auto; padding:40px 20px;">
+<div class="endedwrap">
 	<table class="title space">
 		<tr>
 			<td><img src="{art}ended_icon.png" alt="{ended_icon_text}" width="40" height="40"/></td>
@@ -582,27 +576,27 @@ BANGLADESH
 			<td><div class="declare title list">{list_ended_declare_text}</div></td>
 		</tr>
 	</table>
-	<div style="background-color:rgba(0,14,32,0.7); padding:20px; border-radius:0 0 8px 8px;">
+	<div class="tablewrap">
 		<table class="list">
 			{ctbox2table_datas}
 		</table>
 	</div>
-	<div style="width:960px; margin:0 auto; text-align:center;">
+	<div class="listmorewrap">
 		<a href="#ctrack_finished_more" class="list_more_link">{list_more_ended_text}</a>
 	</div>
 </div>
 
 #chunkabout
-<div style="width:920px; margin:0 auto; padding:40px 20px;">
-	<div style="width:570px; padding-right:60px; display:inline-block; vertical-align:top; line-height:1.35em; word-spacing:0.05em; font-size:18px; color:#fff;">
-		{about_text} <span class="bold" style="color:#fff;">{about_anyone_text}</span>, <span class="bold" style="color:#fff;">{about_anywhere_text}</span>.
-	</div><div style="width:290px; display:inline-block; vertical-align:top; text-align:right;">
-		<a href="http://iatistandard.org/" target="_blank" style="width:270; margin:0 auto; padding:0 30px;"><img src="{art}iati-logo.269.png" alt="IATI logo" width="269" height="70"></a>
+<div class="aboutwrap">
+	<div class="abouttxt">
+		{about_text} <span class="bold">{about_anyone_text}</span>, <span class="bold">{about_anywhere_text}</span>.
+	</div><div class="iatilogo">
+		<a href="http://iatistandard.org/" target="_blank" class="iatilink"><img src="{art}iati-logo.269.png" alt="IATI logo" width="269" height="70"></a>
 	</div>
 </div>
 
 #chunkdi
-<div style="width:100%; margin:0 auto;">
+<div class="datawrap">
 	<a href="mailto:trackerqueries@iatistandard.org" class="datainvest">
 		{data_investigate_text}
 	</a>
