@@ -1,3 +1,9 @@
+Country Tracker (2014-03-19 shi)
+==============================
+CSS classes clean up
+Fixed flag sizes to align height, not width
+
+
 Country Tracker (2014-03-13 shi)
 ==============================
 CSS now has comments for sections
